--- a/back/package.json
+++ b/back/package.json
@@ -23,6 +23,7 @@
     "multer": "^2.0.1",
     "mysql2": "^3.14.1",
     "react-kakao-maps-sdk": "^1.2.0",
+    "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7",
     "swagger-ui-express": "^5.0.1",
     "winston": "^3.17.0",
