--- a/back/src/config/config.json
+++ b/back/src/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "dialect": "sqlite",
-    "storage": "sample.db"
+    "storage": "./src/database/sample.db"
   },
   "test": {
     "username": "root",
