--- a/back/.env
+++ b/back/.env
@@ -4,11 +4,11 @@ PORT=3000
 JWT_SECRET=super_secret_token_key
 OPENAI_API_KEY=sk-xxxxxxx
 
-DB_NAME=sample.db
-DB_USERNAME=yangpa_admin
-DB_PASSWORD=Pa55w.rd
-DB_DATABASE=yangpadb
-DB_HOST=yangpa-cjy113.postgres.database.azure.com
-DB_DIALECT=postgres
+DB_NAME=
+DB_USERNAME=
+DB_PASSWORD=
+DB_DATABASE=
+DB_HOST=
+DB_DIALECT=
 SA_CONNECTION_STRING=
 SA_KEY=
