--- a/back/src/config/config.json
+++ b/back/src/config/config.json
@@ -1,9 +1,9 @@
 {
   "development": {
     "username": "postgres",
-    "password": "1234",
+    "password": "admin1234",
     "database": "polytales_dev",
-    "host": "127.0.0.1",
+    "host": "localhost",
     "port": 5432,
     "dialect": "postgres"
   },
